tests/algorithms/x/Java/data_structures/trie/radix_tree.error
compile: exit status 1
/tmp/TestJavaTranspiler_Algorithms_Golden265_radix_tree444655112/001/Main.java:145: error: incompatible types: String cannot be converted to Number
            if (((Number)(key)).intValue() != k) {
                         ^
/tmp/TestJavaTranspiler_Algorithms_Golden265_radix_tree444655112/001/Main.java:154: error: incompatible types: String cannot be converted to Number
            if (((Number)(key)).intValue() == k) {
                         ^
2 errors
